# kos_am335x_starterware

./: .gitignore  CMakeLists.txt  Makefile  README.md  mix.exs
c_src/: kos_am335x_starterware_gpio.c  readme.md
c_src/gpio/: kos_am335x_gpio.c  readme.md
c_src/pwm/: ehrpwm.h  kos_am335x_pwm.c  readme.md
interface/: mix.exs
lib/: gpio.ex  kos_am335x_starterware.ex  kos_am335x_starterware_gpio.ex  manifest.ex  pwm.ex
manifest/: mix.exs
test/: kos_am335x_starterware_gpio_test.exs  kos_am335x_starterware_test.exs
